Set project overflow-x to hidden to prevent x-axis scrolling

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -4,3 +4,8 @@
 ul {
     margin: 0;
 }
+
+html, body { 
+    overflow-x: hidden; 
+    overflow-y: auto; 
+}
